--- a/marine-front/src/components/SocialMedia/socialMedia.css
+++ b/marine-front/src/components/SocialMedia/socialMedia.css
@@ -11,7 +11,6 @@
   border: none;
 }
 
-/* for all social containers*/
 .socialContainer {
   width: 32px;
   height: 32px;
@@ -23,22 +22,22 @@
   overflow: hidden;
   transition-duration: .3s;
 }
-/* instagram*/
+
 .containerOne:hover {
-  background-color: #d62976;
+  background-image: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
   transition-duration: .3s;
 }
-/* twitter*/
+
 .containerTwo:hover {
   background-color: #3b5998;
   transition-duration: .3s;
 }
-/* linkdin*/
+
 .containerThree:hover {
   background-color: #0072b1;
   transition-duration: .3s;
 }
-/* Whatsapp*/
+
 .containerFour:hover {
   background-color: #128C7E;
   transition-duration: .3s;
