--- a/marine-front/src/components/ServicesCard/sectionService.css
+++ b/marine-front/src/components/ServicesCard/sectionService.css
@@ -5,3 +5,24 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+
+@media screen and (max-width: 991px) and (min-width: 768px) {
+
+  .servicesWrapper {
+    flex-wrap: nowrap;
+    width: 100vw;
+    margin-top: 1em;
+    margin-bottom: 1em;
+  }
+
+  .serviceImg{
+    width: 150px;
+  }
+
+  .serviceName {
+    font-size: 0.8rem;
+  }
+
+
+}
