--- a/marine-front/src/components/SocialMedia/socialMedia.css
+++ b/marine-front/src/components/SocialMedia/socialMedia.css
@@ -72,3 +72,16 @@
   }
 }
 
+
+@media screen and (max-width: 991px) and (min-width: 768px) {
+
+  .socialContainer {
+    width: 50px;
+    height: 50px;
+  }
+
+  .socialSvg {
+    width: 25px;
+  }
+
+}
