--- a/marine-front/src/components/Contact/ContactForm/contactForm.css
+++ b/marine-front/src/components/Contact/ContactForm/contactForm.css
@@ -89,3 +89,11 @@ input, textarea {
 .submitArea {
   text-align: center;
 }
+
+
+@media screen and (max-width: 991px) and (min-width: 768px) {
+  .input {
+    width: 100%;
+  }
+
+}
