--- a/marine-front/src/components/Modal/modal.css
+++ b/marine-front/src/components/Modal/modal.css
@@ -46,3 +46,9 @@
   outline: none;
 }
 
+@media screen and (max-width: 991px) and (min-width: 768px) {
+
+  .modalContainer {
+    width: 500px;;
+  }
+}
