--- a/marine-front/src/components/Contact/ContactForm/contactForm.css
+++ b/marine-front/src/components/Contact/ContactForm/contactForm.css
@@ -97,3 +97,10 @@ input, textarea {
   }
 
 }
+
+@media (min-width: 768px) and (max-width: 1366px) and (orientation: landscape) {
+  .input {
+    width: 100%;
+  }
+}
+
