--- a/marine-front/src/components/Modal/modal.css
+++ b/marine-front/src/components/Modal/modal.css
@@ -49,6 +49,13 @@
 @media screen and (max-width: 991px) and (min-width: 768px) {
 
   .modalContainer {
-    width: 500px;;
+    width: 500px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1366px) and (orientation: landscape) {
+
+  .modalContainer {
+    width: 500px;
   }
 }
