--- a/marine-front/src/components/common/Button/button.css
+++ b/marine-front/src/components/common/Button/button.css
@@ -25,8 +25,8 @@
 }
 
 .whiteBtn {
-  border: 2px solid white;
-  color: white;
+  border: 2px solid #f5f5dc;
+  color: #f5f5dc;
 }
 
 .purpleBtn::after, .whiteBtn::after {
@@ -63,7 +63,7 @@
 
 
 .purpleBtn:hover::after {
-  background: white;
+  background: #f5f5dc;
   color: #5A1D3E;
 }
 
