--- a/marine-front/src/components/InfoCard/infoCard.css
+++ b/marine-front/src/components/InfoCard/infoCard.css
@@ -23,3 +23,17 @@
 .infoText {
   text-align: center;
 }
+
+@media (min-width: 768px) and (max-width: 1366px) and (orientation: landscape) {
+  .infoImg {
+    width: 150px;
+  }
+
+  .textWrapper {
+    font-size: 0.8rem;
+    height: 48px;
+    display: flex;
+    align-items: center;
+  }
+
+}
