--- a/marine-front/src/components/ServicesCard/sectionService.css
+++ b/marine-front/src/components/ServicesCard/sectionService.css
@@ -26,3 +26,12 @@
 
 
 }
+
+
+@media (min-width: 768px) and (max-width: 1366px) and (orientation: landscape) {
+  .servicesWrapper {
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+   
+  }
+}
