--- a/marine-front/src/components/SocialMedia/socialMedia.css
+++ b/marine-front/src/components/SocialMedia/socialMedia.css
@@ -85,3 +85,14 @@
   }
 
 }
+
+@media (min-width: 768px) and (max-width: 1366px) and (orientation: landscape) {
+  .socialContainer {
+    width: 50px;
+    height: 50px;
+  }
+
+  .socialSvg {
+    width: 25px;
+  }
+}
