--- a/marine-front/src/pages/public/Home/home.css
+++ b/marine-front/src/pages/public/Home/home.css
@@ -218,6 +218,7 @@ h2 {
   margin-top: 3em;
 }
 
+
 .priceWrapper {
   position: relative;
   background: #F6EDE8;
@@ -447,4 +448,129 @@ h2 {
 
   
 }
+
+@media (min-width: 768px) and (max-width: 1366px) and (orientation: landscape) {
+
+  .homeTitle {
+    font-size: 1.8rem;
+  }
+
+  .titleSlogan{
+    font-size: 1.3rem;
+  }
+
+  .firstSection {
+    margin-top: 3em;
+  }
+
+  .logoWrapper, .topLogo, .bodyLogo, .footerLogo {
+    width: 80vw;
+  
+  }
+
+  .backgroundLogo {
+    width: 100%;
+  }
+
+  .spanTitle {
+    font-size: 1.2rem;
+  }
+
+  .pourText {
+    font-size: 1rem;
+    margin-top: 0.7em;
+  }
+
+  .ouItem {
+    font-size: 1rem;
+  }
+
+  .comment {
+    font-size: 1rem;
+  }
+
+  .secondSection {
+    margin-top: 3em;
+  }
+
+  .citation {
+    font-size: 1.2rem;
+  }
+
+  .socrate {
+    font-size: 0.9rem;
+  }
+
+  .citationFooter {
+    font-size: 0.9rem;
+  }
+
+  .h2SecondSection {
+    width: 100%;
+    margin-top: 2em;
+    font-size: 1.2rem;
+  }
+
+  .infoCardWrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 100px;
+  }
+
+  .infoText {
+    font-size: 1rem;
+    padding: 1em;
+  }
+
+  .thirdSection {
+    margin-top: 3em;
+  }
+
+  .h2ThirdSection {
+    font-size: 1.5rem;
+  }
+
+  .thirdIntro {
+    font-size: 1rem;
+    padding: 1.2em;
+  }
+
+  .portrait {
+    width: 13rem;
+  }
+
+  .fourSection {
+    margin-top: 3em;
+  }
+
+  .h2FourSection {
+    font-size: 1.5rem;;
+  }
+
+  .buttonPsycho {
+    width: 25%;
+  }
+
+  .priceWrapper {
+    width: 50%;
+  }
+
+  .asterixInfo {
+    font-size: 0.8rem;
+  }
+
+  .impotCheque {
+    width: 12%;
+  }
+
+  .impotText {
+    font-size: 0.8rem;
+  }
+
+  
+}
+
+
+
+
 
